--- a/css/pages/_navbar.scss
+++ b/css/pages/_navbar.scss
@@ -99,7 +99,7 @@
 	top: 0;
 	z-index: 1000;
 	width: 100%;
-	background: rgba(255,255,255,.9);
+	background: rgba(255,255,255,1);
 
 	@media screen and (max-width: 710px) {
 		display: inline;
